force-app/main/default/objects/Chantier__c/fields/nbR2Pris__c.field-meta.xml
<CustomField>
    <fullName>nbR2Pris__c</fullName>
    <label>Nombre de R2 pris</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>