force-app/main/default/objects/Chantier__c/fields/nbRDVDeplaces__c.field-meta.xml
<CustomField>
    <fullName>nbRDVDeplaces__c</fullName>
    <formula>nbR1Deplaces__c + nbR2Deplaces__c + nbRPlusDeplaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de RDV déplacés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>