force-app/main/default/objects/Chantier__c/fields/nbRDVEffectues__c.field-meta.xml
<CustomField>
    <fullName>nbRDVEffectues__c</fullName>
    <formula>nbR1Effectues__c + nbR2Effectues__c + nbRPlusEffectues__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de RDV effectués</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>