force-app/main/default/objects/Chantier__c/fields/nbRDVNonEffectues__c.field-meta.xml
<CustomField>
    <fullName>nbRDVNonEffectues__c</fullName>
    <formula>nbR1NonEffectues__c + nbR2NonEffectues__c + nbRPlusNonEffectues__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de RDV non effectués</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>