force-app/main/default/objects/Chantier__c/fields/nbRDVNonEffectuesAvecDep__c.field-meta.xml
<CustomField>
    <fullName>nbRDVNonEffectuesAvecDep__c</fullName>
    <formula>nbR1NonEffectuesAvecDep__c + nbR2NonEffectuesAvecDep__c + nbRPlusNonEffectuesAvecDep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de RDV non effectués (avec dép.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>