force-app/main/default/objects/Chantier__c/fields/nbRDVPris__c.field-meta.xml
<CustomField>
    <fullName>nbRDVPris__c</fullName>
    <formula>nbR1Pris__c + nbR2Pris__c + nbRPlusPris__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de RDV pris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>