force-app/main/default/objects/Chantier__c/fields/nbRPlusDeplaces__c.field-meta.xml
<CustomField>
    <fullName>nbRPlusDeplaces__c</fullName>
    <label>Nombre de R+ déplacés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>