force-app/main/default/objects/Chantier__c/fields/nbRPlusEffectues__c.field-meta.xml
<CustomField>
    <fullName>nbRPlusEffectues__c</fullName>
    <label>Nombre de R+ effectués</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>