force-app/main/default/objects/Chantier__c/fields/nbRPlusNonEffectues__c.field-meta.xml
<CustomField>
    <fullName>nbRPlusNonEffectues__c</fullName>
    <label>Nombre de R+ non effectués</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>