force-app/main/default/objects/Chantier__c/fields/nbRPlusNonEffectuesAvecDep__c.field-meta.xml
<CustomField>
    <fullName>nbRPlusNonEffectuesAvecDep__c</fullName>
    <label>Nombre de R+ non effectués (avec dép.)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>