force-app/main/default/objects/Chantier__c/fields/nbRPlusPris__c.field-meta.xml
<CustomField>
    <fullName>nbRPlusPris__c</fullName>
    <label>Nombre de R+ pris</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>