force-app/main/default/objects/Chantier__c/fields/nbTagsAppel__c.field-meta.xml
<CustomField>
    <fullName>nbTagsAppel__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Nombre de tags appel (Call)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>