force-app/main/default/objects/Chantier__c/fields/nbTotalContrats__c.field-meta.xml
<CustomField>
    <fullName>nbTotalContrats__c</fullName>
    <formula>nbContratsResilies__c +  nbContratsVendus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de contrats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>