force-app/main/default/objects/Chantier__c/fields/nbTotalDevis__c.field-meta.xml
<CustomField>
    <fullName>nbTotalDevis__c</fullName>
    <formula>nbDevisNonTransmis__c + nbDevisTransmis__c + nbDevisAConfigurer__c + nbDevisErrones__c + nbDevisVendusEnAttente__c + nbDevisVendusEnregistres__c + nbDevisVendusIncontournables__c + nbDevisResilies__c + nbDevisExpires__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de devis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>