force-app/main/default/objects/Chantier__c/fields/nbTotalIncontournables__c.field-meta.xml
<CustomField>
    <fullName>nbTotalIncontournables__c</fullName>
    <formula>nbIncontournablesEnCours__c + nbIncontournablesEnregistres__c + nbIncontournablesTermines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total d&apos;incontournables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>