force-app/main/default/objects/Chantier__c/fields/nbTotalLocataires__c.field-meta.xml
<CustomField>
    <fullName>nbTotalLocataires__c</fullName>
    <label>Nombre total de locataires</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>