force-app/main/default/objects/Chantier__c/fields/nbTotalOccupants__c.field-meta.xml
<CustomField>
    <fullName>nbTotalOccupants__c</fullName>
    <label>Nombre total d&apos;occupants</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>