force-app/main/default/objects/Chantier__c/fields/nbTotalProjets__c.field-meta.xml
<CustomField>
    <fullName>nbTotalProjets__c</fullName>
    <formula>nbProjetsAnalyse__c + nbProjetsRDV__c + nbProjetsDevis__c + nbProjetsDevisEnvoye__c + nbProjetsEnAttente__c + nbProjetsNegociation__c + nbProjetsReporte__c + nbProjetsVendu__c + nbProjetsRefus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de projets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>