force-app/main/default/objects/Chantier__c/fields/nbTotalProprietaires__c.field-meta.xml
<CustomField>
    <fullName>nbTotalProprietaires__c</fullName>
    <label>Nombre total de propriétaires</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>