force-app/main/default/objects/Chantier__c/fields/nbTotalR1__c.field-meta.xml
<CustomField>
    <fullName>nbTotalR1__c</fullName>
    <formula>nbR1Effectues__c + nbR1NonEffectues__c + nbR1NonEffectuesAvecDep__c + nbR1Pris__c + nbR1Deplaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de R1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>