force-app/main/default/objects/Chantier__c/fields/nbTotalR2__c.field-meta.xml
<CustomField>
    <fullName>nbTotalR2__c</fullName>
    <formula>nbR2Effectues__c + nbR2NonEffectues__c + nbR2NonEffectuesAvecDep__c + nbR2Pris__c + nbR2Deplaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de R2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>