force-app/main/default/objects/Chantier__c/fields/nbTotalRDV__c.field-meta.xml
<CustomField>
    <fullName>nbTotalRDV__c</fullName>
    <formula>nbTotalR1__c + nbTotalR2__c + nbTotalRPlus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de RDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>