force-app/main/default/objects/Chantier__c/fields/nbTotalRPlus__c.field-meta.xml
<CustomField>
    <fullName>nbTotalRPlus__c</fullName>
    <formula>nbRPlusEffectues__c + nbRPlusNonEffectues__c + nbRPlusNonEffectuesAvecDep__c + nbRPlusPris__c + nbRPlusDeplaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total de R+</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>