force-app/main/default/objects/Chantier__c/fields/ncpWithoutAssetOrAssetRHCount__c.field-meta.xml
<CustomField>
    <fullName>ncpWithoutAssetOrAssetRHCount__c</fullName>
    <description>Nombre de NCP qui ne sont associées à aucun actifs ou à un actif &quot;Reprise Historique&quot;</description>
    <label>[#] Nombre de NCP sans actifs ou RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>