force-app/main/default/objects/Chantier__c/fields/nomLocataires__c.field-meta.xml
<CustomField>
    <fullName>nomLocataires__c</fullName>
    <label>Nom (Locataires)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>