force-app/main/default/objects/Chantier__c/fields/nomOccupants__c.field-meta.xml
<CustomField>
    <fullName>nomOccupants__c</fullName>
    <label>Nom (Occupants)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>