force-app/main/default/objects/Chantier__c/fields/nomProprietaires__c.field-meta.xml
<CustomField>
    <fullName>nomProprietaires__c</fullName>
    <label>Nom (Propriétaires)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>