force-app/main/default/objects/Chantier__c/fields/numeroChantier__c.field-meta.xml
<CustomField>
    <fullName>numeroChantier__c</fullName>
    <displayFormat>CHA/{YYYY}/{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>N° de chantier</label>
    <type>AutoNumber</type>
</CustomField>