force-app/main/default/objects/Chantier__c/fields/occupant__c.field-meta.xml
<CustomField>
    <fullName>occupant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Si différent du locataire</inlineHelpText>
    <label>Occupant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Occupant)</relationshipLabel>
    <relationshipName>occupantChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>