force-app/main/default/objects/Chantier__c/fields/occupantPrecedent__c.field-meta.xml
<CustomField>
    <fullName>occupantPrecedent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occupant précédent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Occupant précédent)</relationshipLabel>
    <relationshipName>occupantPrecedentChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>