force-app/main/default/objects/Chantier__c/fields/OriginesCompte__c.field-meta.xml
<CustomField>
    <fullName>OriginesCompte__c</fullName>
    <formula>proprietaire__r.OriginesCompte__c</formula>
    <label>Origines du compte</label>
    <type>Text</type>
</CustomField>