force-app/main/default/objects/Chantier__c/fields/owner__c.field-meta.xml
<CustomField>
    <fullName>owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriétaire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chantiers</relationshipName>
    <type>Lookup</type>
</CustomField>