force-app/main/default/objects/Chantier__c/fields/owner_Equipe__c.field-meta.xml
<CustomField>
    <fullName>owner_Equipe__c</fullName>
    <formula>IF(OR(owner__r.Profile.Name = &apos;K/K - DC&apos;, owner__r.Profile.Name = &apos;K/K - TA&apos;, owner__r.Profile.Name = &apos;K/K - TA/Entrant&apos;, owner__r.Profile.Name = &apos;K/K - TA/Sortant&apos;, owner__r.Profile.Name = &apos;K/K - Superviseur&apos;, owner__r.Profile.Name = &apos;K/K - Assistante Call&apos;, owner__r.UserRole.Name = &apos;Directeur Call&apos;, owner__r.UserRole.Name = &apos;Superviseur&apos;, owner__r.UserRole.Name = &apos;TA&apos;), TEXT(owner__r.EquipesCall__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipe (Propriétaire)</label>
    <type>Text</type>
</CustomField>