force-app/main/default/objects/Chantier__c/fields/owner_LibelleDV__c.field-meta.xml
<CustomField>
    <fullName>owner_LibelleDV__c</fullName>
    <formula>IF(OR(CONTAINS(&apos;K/K - DR,K/K - DV,K/K - DV - Mobile,K/K - En charge de magasin,K/K - En charge de magasin - Mobile,K/K - Foire,K/K - Formateur,K/K - RV,K/K - RV - Mobile,K/K - RVJ,K/K - RVJ - Mobile,K/K - TP,K/K - Vendeur,K/K - Vendeur - Mobile&apos;, owner__r.Profile.Name),
      owner__r.UserRole.Name = &apos;Foire&apos;, 
      owner__r.UserRole.Name = &apos;Formateur&apos;), 
   owner__r.LibelleDV__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV (Propriétaire)</label>
    <type>Text</type>
</CustomField>