force-app/main/default/objects/Chantier__c/fields/pays__c.field-meta.xml
<CustomField>
    <fullName>pays__c</fullName>
    <label>Pays</label>
    <length>80</length>
    <type>Text</type>
</CustomField>