force-app/main/default/objects/Chantier__c/fields/paysLocataires__c.field-meta.xml
<CustomField>
    <fullName>paysLocataires__c</fullName>
    <label>Pays (Locataires)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>