force-app/main/default/objects/Chantier__c/fields/paysOccupants__c.field-meta.xml
<CustomField>
    <fullName>paysOccupants__c</fullName>
    <label>Pays (Occupants)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>