force-app/main/default/objects/Chantier__c/fields/paysProprietaires__c.field-meta.xml
<CustomField>
    <fullName>paysProprietaires__c</fullName>
    <label>Pays (Propriétaires)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>