force-app/main/default/objects/Chantier__c/fields/prenomLocataires__c.field-meta.xml
<CustomField>
    <fullName>prenomLocataires__c</fullName>
    <label>Prénom (Locataires)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>