force-app/main/default/objects/Chantier__c/fields/prenomOccupants__c.field-meta.xml
<CustomField>
    <fullName>prenomOccupants__c</fullName>
    <label>Prénom (Occupants)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>