force-app/main/default/objects/Chantier__c/fields/prenomProprietaires__c.field-meta.xml
<CustomField>
    <fullName>prenomProprietaires__c</fullName>
    <label>Prénom (Propriétaires)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>