force-app/main/default/objects/Chantier__c/fields/presenceGarage__c.field-meta.xml
<CustomField>
    <fullName>presenceGarage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence d&apos;un garage</label>
    <type>Checkbox</type>
</CustomField>