force-app/main/default/objects/Chantier__c/fields/presencePortail__c.field-meta.xml
<CustomField>
    <fullName>presencePortail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence d&apos;un portail</label>
    <type>Checkbox</type>
</CustomField>