force-app/main/default/objects/Chantier__c/fields/presenceTerrasse__c.field-meta.xml
<CustomField>
    <fullName>presenceTerrasse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence d&apos;une terrasse</label>
    <type>Checkbox</type>
</CustomField>