force-app/main/default/objects/Chantier__c/fields/proprietaire__c.field-meta.xml
<CustomField>
    <fullName>proprietaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriétaire (fiscal)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Propriétaire)</relationshipLabel>
    <relationshipName>proprietaireChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>