force-app/main/default/objects/Chantier__c/fields/proprietairePrecedent__c.field-meta.xml
<CustomField>
    <fullName>proprietairePrecedent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriétaire précédent (fiscal)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Propriétaire précédent)</relationshipLabel>
    <relationshipName>proprietairePrecedentChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>