force-app/main/default/objects/Chantier__c/fields/publicSharing__c.field-meta.xml
<CustomField>
    <fullName>publicSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-279 : Flag permetttant de savoir si l&apos;enregistrement est déjà public</description>
    <label>Enregistrement public</label>
    <type>Checkbox</type>
</CustomField>