force-app/main/default/objects/Chantier__c/fields/rue__c.field-meta.xml
<CustomField>
    <fullName>rue__c</fullName>
    <label>Rue</label>
    <type>TextArea</type>
</CustomField>