force-app/main/default/objects/Chantier__c/fields/rueLocataires__c.field-meta.xml
<CustomField>
    <fullName>rueLocataires__c</fullName>
    <label>Rue (Locataires)</label>
    <type>TextArea</type>
</CustomField>