force-app/main/default/objects/Chantier__c/fields/rueOccupants__c.field-meta.xml
<CustomField>
    <fullName>rueOccupants__c</fullName>
    <label>Rue (Occupants)</label>
    <type>TextArea</type>
</CustomField>