force-app/main/default/objects/Chantier__c/fields/rueProprietaires__c.field-meta.xml
<CustomField>
    <fullName>rueProprietaires__c</fullName>
    <label>Rue (Propriétaires)</label>
    <type>TextArea</type>
</CustomField>