force-app/main/default/objects/Chantier__c/fields/salesEntity__c.field-meta.xml
<CustomField>
    <fullName>salesEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Magasin (Entité commerciale)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entités commerciales (Chantier)</relationshipLabel>
    <relationshipName>ChantierSalesEntities</relationshipName>
    <type>Lookup</type>
</CustomField>