force-app/main/default/objects/Chantier__c/fields/scoreGeocodage__c.field-meta.xml
<CustomField>
    <fullName>scoreGeocodage__c</fullName>
    <label>Score du géocodage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>