force-app/main/default/objects/Chantier__c/fields/sectorisation__c.field-meta.xml
<CustomField>
    <fullName>sectorisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sectorisation</label>
    <referenceTo>Sectorisation__c</referenceTo>
    <relationshipLabel>Chantiers</relationshipLabel>
    <relationshipName>sectorisationChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>