force-app/main/default/objects/Chantier__c/fields/serviceAppointmentCount__c.field-meta.xml
<CustomField>
    <fullName>serviceAppointmentCount__c</fullName>
    <description>Nombre de RDV</description>
    <inlineHelpText>Nombre de RDV</inlineHelpText>
    <label>[#] Nombre de RDV</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>