force-app/main/default/objects/Chantier__c/fields/serviceApppointmentInProgressCount__c.field-meta.xml
<CustomField>
    <fullName>serviceApppointmentInProgressCount__c</fullName>
    <label>[#] Nombre de RDV en cours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>