force-app/main/default/objects/Chantier__c/fields/serviceEntity__c.field-meta.xml
<CustomField>
    <fullName>serviceEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dépôt (Entité service)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entités service (Chantier)</relationshipLabel>
    <relationshipName>ChantierServiceEntities</relationshipName>
    <type>Lookup</type>
</CustomField>