force-app/main/default/objects/Chantier__c/fields/serviceEntityDistance__c.field-meta.xml
<CustomField>
    <fullName>serviceEntityDistance__c</fullName>
    <description>Distance (km) calculée à vol d&apos;oiseau entre le chantier et l&apos;entité service.</description>
    <formula>DISTANCE(GEOLOCATION(Localisation__Latitude__s, Localisation__Longitude__s),
GEOLOCATION( serviceEntity__r.Localisation__Latitude__s , serviceEntity__r.Localisation__Longitude__s), &apos;km&apos;)</formula>
    <label>Distance de l&apos;entité service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>