force-app/main/default/objects/Chantier__c/fields/statusSummary__c.field-meta.xml
<CustomField>
    <fullName>statusSummary__c</fullName>
    <formula>TEXT(DATEVALUE(CreatedDate)) + &apos; (&apos; + TEXT(FLOOR((TODAY() - DATEVALUE(CreatedDate))/365)) + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Statut)</label>
    <type>Text</type>
</CustomField>