force-app/main/default/objects/Chantier__c/fields/statutDernierContrat__c.field-meta.xml
<CustomField>
    <fullName>statutDernierContrat__c</fullName>
    <label>Statut du dernier contrat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>