force-app/main/default/objects/Chantier__c/fields/statutDernierDevis__c.field-meta.xml
<CustomField>
    <fullName>statutDernierDevis__c</fullName>
    <label>Statut du dernier devis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>