force-app/main/default/objects/Chantier__c/fields/statutDernierIEC__c.field-meta.xml
<CustomField>
    <fullName>statutDernierIEC__c</fullName>
    <label>Statut du dernier IEC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>