force-app/main/default/objects/Chantier__c/fields/statutDernierIncontournable__c.field-meta.xml
<CustomField>
    <fullName>statutDernierIncontournable__c</fullName>
    <label>Statut du dernier incontournable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>