force-app/main/default/objects/Chantier__c/fields/statutDernierProjet__c.field-meta.xml
<CustomField>
    <fullName>statutDernierProjet__c</fullName>
    <label>Statut du dernier projet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>