force-app/main/default/objects/Chantier__c/fields/statutDernierR1__c.field-meta.xml
<CustomField>
    <fullName>statutDernierR1__c</fullName>
    <label>Statut du dernier R1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>