force-app/main/default/objects/Chantier__c/fields/statutDernierR2__c.field-meta.xml
<CustomField>
    <fullName>statutDernierR2__c</fullName>
    <label>Statut du dernier R2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>