force-app/main/default/objects/Chantier__c/fields/statutDernierRDV__c.field-meta.xml
<CustomField>
    <fullName>statutDernierRDV__c</fullName>
    <label>Statut du dernier RDV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>