force-app/main/default/objects/Chantier__c/fields/statutDernierRPlus__c.field-meta.xml
<CustomField>
    <fullName>statutDernierRPlus__c</fullName>
    <label>Statut du dernier R+</label>
    <length>100</length>
    <type>Text</type>
</CustomField>