force-app/main/default/objects/Chantier__c/fields/statutPremierContrat__c.field-meta.xml
<CustomField>
    <fullName>statutPremierContrat__c</fullName>
    <label>Statut du 1er contrat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>