force-app/main/default/objects/Chantier__c/fields/statutPremierDevis__c.field-meta.xml
<CustomField>
    <fullName>statutPremierDevis__c</fullName>
    <label>Statut du 1er devis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>