force-app/main/default/objects/Chantier__c/fields/statutPremierIncontournable__c.field-meta.xml
<CustomField>
    <fullName>statutPremierIncontournable__c</fullName>
    <label>Statut du 1er incontournable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>