force-app/main/default/objects/Chantier__c/fields/statutPremierProjet__c.field-meta.xml
<CustomField>
    <fullName>statutPremierProjet__c</fullName>
    <label>Statut du 1er projet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>