force-app/main/default/objects/Chantier__c/fields/statutPremierR1__c.field-meta.xml
<CustomField>
    <fullName>statutPremierR1__c</fullName>
    <label>Statut du 1er R1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>