force-app/main/default/objects/Chantier__c/fields/statutPremierR2__c.field-meta.xml
<CustomField>
    <fullName>statutPremierR2__c</fullName>
    <label>Statut du 1er R2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>