force-app/main/default/objects/Chantier__c/fields/statutPremierRDV__c.field-meta.xml
<CustomField>
    <fullName>statutPremierRDV__c</fullName>
    <label>Statut du 1er RDV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>