force-app/main/default/objects/Chantier__c/fields/statutPremierRPlus__c.field-meta.xml
<CustomField>
    <fullName>statutPremierRPlus__c</fullName>
    <label>Statut du 1er R+</label>
    <length>100</length>
    <type>Text</type>
</CustomField>