force-app/main/default/objects/Chantier__c/fields/statutVisuel__c.field-meta.xml
<CustomField>
    <fullName>statutVisuel__c</fullName>
    <description>Icône présentant visuellement un croisement entre le type d’habitation et l’étape du dernier projet.
La forme est portée par le type d’enregistrement et la couleur est portée par l’étape du dernier projet.</description>
    <formula>IMAGE(CASE(typeHabitation__c, &apos;Pavillon&apos;, 
CASE(statutDernierProjet__c,
&apos;Analyse&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_blue.png&apos;,
&apos;RDV&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_yellow.png&apos;,
&apos;Devis&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_orange.png&apos;,
&apos;Devis envoyé&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_red.png&apos;,
&apos;Reporté&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_purple.png&apos;,
&apos;Vendu&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_green.png&apos;,
&apos;Refus&apos;,&apos;/resource/Icons_StatutVisuel/chantier/pavillon_grey.png&apos;,
&apos;/resource/Icons_StatutVisuel/chantier/pavillon_null.png&apos;), 
&apos;Appartement&apos;,
CASE(statutDernierProjet__c,
&apos;Analyse&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_blue.png&apos;,
&apos;RDV&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_yellow.png&apos;,
&apos;Devis&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_orange.png&apos;,
&apos;Devis envoyé&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_red.png&apos;,
&apos;Reporté&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_purple.png&apos;,
&apos;Vendu&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_green.png&apos;,
&apos;Refus&apos;,&apos;/resource/Icons_StatutVisuel/chantier/appartement_grey.png&apos;,
&apos;/resource/Icons_StatutVisuel/chantier/appartement_null.png&apos;),
CASE(statutDernierProjet__c,
&apos;Analyse&apos;,&apos;/resource/Icons_StatutVisuel/unknown_blue.png&apos;,
&apos;RDV&apos;,&apos;/resource/Icons_StatutVisuel/unknown_yellow.png&apos;,
&apos;Devis&apos;,&apos;/resource/Icons_StatutVisuel/unknown_orange.png&apos;,
&apos;Devis envoyé&apos;,&apos;/resource/Icons_StatutVisuel/unknown_red.png&apos;,
&apos;Reporté&apos;,&apos;/resource/Icons_StatutVisuel/unknown_purple.png&apos;,
&apos;Vendu&apos;,&apos;/resource/Icons_StatutVisuel/unknown_green.png&apos;,
&apos;Refus&apos;,&apos;/resource/Icons_StatutVisuel/unknown_grey.png&apos;,
&apos;/resource/Icons_StatutVisuel/unknown_null.png&apos;)), 
TEXT(typeHabitation__c)+&apos; - &apos;+statutDernierProjet__c, 
20,20)</formula>
    <label>Statut visuel</label>
    <type>Text</type>
</CustomField>