force-app/main/default/objects/Chantier__c/fields/surchargeSectorisationReference__c.field-meta.xml
<CustomField>
    <fullName>surchargeSectorisationReference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sectorisation Référence réassignée</label>
    <type>Checkbox</type>
</CustomField>