force-app/main/default/objects/Chantier__c/fields/telephoneDomicileLocataires__c.field-meta.xml
<CustomField>
    <fullName>telephoneDomicileLocataires__c</fullName>
    <label>Téléphone domicile (Locataires)</label>
    <type>Phone</type>
</CustomField>