force-app/main/default/objects/Chantier__c/fields/telephoneDomicileOccupants__c.field-meta.xml
<CustomField>
    <fullName>telephoneDomicileOccupants__c</fullName>
    <label>Téléphone domicile (Occupants)</label>
    <type>Phone</type>
</CustomField>