force-app/main/default/objects/Chantier__c/fields/telephoneDomicileProprietaires__c.field-meta.xml
<CustomField>
    <fullName>telephoneDomicileProprietaires__c</fullName>
    <label>Téléphone domicile (Propriétaires)</label>
    <type>Phone</type>
</CustomField>