force-app/main/default/objects/Chantier__c/fields/telephoneLocataires__c.field-meta.xml
<CustomField>
    <fullName>telephoneLocataires__c</fullName>
    <label>Téléphone (Locataires)</label>
    <type>Phone</type>
</CustomField>