force-app/main/default/objects/Chantier__c/fields/telephoneMobileLocataires__c.field-meta.xml
<CustomField>
    <fullName>telephoneMobileLocataires__c</fullName>
    <label>Téléphone mobile (Locataires)</label>
    <type>Phone</type>
</CustomField>